--- a/apps/core/templates/core/current.html
+++ b/apps/core/templates/core/current.html
@@ -20,9 +20,9 @@
             </div>
         {% else %}
             <div class="text-center">
-                <h2>Looks like you don't have any todos! Nice work.</h2>
+                <h2>No outstanding tasks</h2>
             <br>
-            <a role="button" class="btn btn-primary" href="{% url 'createtodo' %}">New Todo</a>
+            <a role="button" class="btn btn-primary" href="{% url 'createtodo' %}">New Task</a>
             </div>
         {% endif %}
         </div>
