--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -1,4 +1,4 @@
-{% extends "todo/base.html" %}
+{% extends "core/base.html" %}
 
 {% block content %}
 <br>
@@ -8,10 +8,9 @@
     <br>
     <br>
 <div class="row justify-content-center mt-5">
-        <div class="col-md-7 text-center">
+        <div class="col-lg-6 text-center">
 
-                 <h1>Simply Your Todos. Woo!</h1>
-            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+                 <h1>Simple Todo App, WIP</h1>
         <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
         </div>
     </div>
