--- a/apps/core/templates/core/loginuser.html
+++ b/apps/core/templates/core/loginuser.html
@@ -1,4 +1,4 @@
-{% extends "todo/base.html" %}
+{% extends "core/base.html" %}
 
 {% block content %}
     <div class="row justify-content-center mt-5">
